--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ otp_release:
 - 20.3
 - 21.0
 install:
-- "kerl list releases"
+- "kerl update releases; kerl list releases"
 - "./_test/bootstrap.sh"
 script:
 - configlet lint .
