--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ name: CI
 on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: [20.3, 21.3, 22.0]
+        otp: ["20.3", "21.3", "22.0"]
     steps:
     - uses: actions/checkout@v1
     - uses: docker://erlang:${{ matrix.otp }}
