--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,15 @@ name: Exercism Erlang Track verification
 on: [push]
 
 jobs:
+  configlet:
+    name: check track configuration
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: get configlet
+      run: ./bin/fetch-configlet
+    - name: run configlet
+      run: ./bin/configlet lint .
   test_erlang:
     name: Test examples against OTP ${{ matrix.otp }}
     runs-on: ubuntu-latest
