--- a/.github/workflows/uuid.yml
+++ b/.github/workflows/uuid.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v1
     - run: sudo apt install --yes jq
     - run: |
-        bad_uuid=$(cat config.json | jq --raw-output '.exercises | map(.uuid) | .[]' | grep -vE '^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$')
+        bad_uuid=$(cat config.json | jq --raw-output '.exercises | map(.uuid) | .[]' | grep -vE '^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$' || true)
         if [[ -n "$bad_uuid" ]]; then
           printf "Invalid UUID(s) found:"
           printf "%s" "${bad_uuid}"
