--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 ---
 language: erlang
 script:
-- printf "I am draining travis from this project, we will always pass. Please check GitHub actions when you want to add additional checks"
+- printf "We are draining travis from this project, we will always pass. Please check GitHub actions when you want to add additional checks"
