--- a/config.json
+++ b/config.json
@@ -809,6 +809,18 @@
       "topics": [
         "lists"
       ]
+    },
+    {
+      "slug": "binary-search-tree",
+      "uuid": "a8f7f17e-567b-43ec-9ee5-6288367f0ae4",
+      "core": false,
+      "unlocked_by": null,
+      "difficulty": 3,
+      "topics": [
+        "recursion",
+        "searching",
+        "trees"
+      ]
     }
   ]
 }
