--- a/config.json
+++ b/config.json
@@ -829,6 +829,18 @@
       "topics": [
         "lists"
       ]
+    },
+    {
+      "slug": "simple-linked-list",
+      "uuid": "56a794de-40ee-4ff2-a1dd-f9b83f62d4b0",
+      "core": false,
+      "unlocked_by": "strain",
+      "difficulty": 3,
+      "topics": [
+        "data_structures",
+        "lists",
+        "recursion"
+      ]
     }
   ]
 }
