--- a/config.json
+++ b/config.json
@@ -841,6 +841,18 @@
         "lists",
         "recursion"
       ]
+    },
+    {
+      "slug": "binary-search-tree",
+      "uuid": "a8f7f17e-567b-43ec-9ee5-6288367f0ae4",
+      "core": false,
+      "unlocked_by": "strain",
+      "difficulty": 3,
+      "topics": [
+        "recursion",
+        "searching",
+        "trees"
+      ]
     }
   ]
 }
