--- a/config.json
+++ b/config.json
@@ -1,6 +1,12 @@
 {
   "language": "Erlang",
   "active": true,
+  "status": {
+    "concept_exercises": false,
+    "test_runner": false,
+    "representer": false,
+    "analyzer": false
+  },
   "blurb": "Erlang is a functional language, designed for use in real-time distributed systems. It's used within telecom networks, and is notable for simple message passing with lightweight independent processes.",
   "version": 3,
   "foregone": [
