--- a/config.json
+++ b/config.json
@@ -10,6 +10,10 @@
   },
   "blurb": "Erlang is a functional language, designed for use in real-time distributed systems. It's used within telecom networks, and is notable for simple message passing with lightweight independent processes.",
   "version": 3,
+  "online_editor": {
+    "indent_style": "space",
+    "indent_size": 4
+  },
   "foregone": [
     "binary-search",
     "lens-person",
