--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
   "exercises": [
     {
       "slug": "hello-world",
+      "name": "Hello World",
       "uuid": "50547bc4-a78e-4450-9412-30bfa46c4a93",
       "difficulty": 1,
       "topics": [
@@ -30,6 +31,7 @@
     },
     {
       "slug": "two-fer",
+      "name": "Two Fer",
       "uuid": "ea369b85-b180-48ca-b602-c40811fc865f",
       "difficulty": 1,
       "topics": [
@@ -39,6 +41,7 @@
     },
     {
       "slug": "leap",
+      "name": "Leap",
       "uuid": "241eb25c-925b-4395-876c-c1dfe84e1c85",
       "difficulty": 1,
       "topics": [
@@ -48,6 +51,7 @@
     },
     {
       "slug": "accumulate",
+      "name": "Accumulate",
       "uuid": "a21065ca-6aad-46b2-ada0-6a62abfcea2b",
       "difficulty": 1,
       "topics": [
@@ -56,6 +60,7 @@
     },
     {
       "slug": "collatz-conjecture",
+      "name": "Collatz Conjecture",
       "uuid": "63c77b77-5a02-40ce-b5f6-372a5b3ae13d",
       "difficulty": 1,
       "topics": [
@@ -66,6 +71,7 @@
     },
     {
       "slug": "raindrops",
+      "name": "Raindrops",
       "uuid": "63259a44-cdec-4e25-ab0e-eddc6f9a9ca1",
       "difficulty": 1,
       "topics": [
@@ -76,6 +82,7 @@
     },
     {
       "slug": "rna-transcription",
+      "name": "Rna Transcription",
       "uuid": "8e9a98b1-bf4f-4c94-a258-a8618cc37f55",
       "difficulty": 2,
       "topics": [
@@ -86,6 +93,7 @@
     },
     {
       "slug": "bob",
+      "name": "Bob",
       "uuid": "fced3620-26f2-4439-822c-27e1d59e24e1",
       "difficulty": 2,
       "topics": [
@@ -95,6 +103,7 @@
     },
     {
       "slug": "strain",
+      "name": "Strain",
       "uuid": "c10bfbab-0b58-4fcb-aadc-304bd4b73cfc",
       "difficulty": 2,
       "topics": [
@@ -104,6 +113,7 @@
     },
     {
       "slug": "hamming",
+      "name": "Hamming",
       "uuid": "8b7390fc-da44-4f02-ad17-a7eb5c19cf2b",
       "difficulty": 2,
       "topics": [
@@ -112,6 +122,7 @@
     },
     {
       "slug": "space-age",
+      "name": "Space Age",
       "uuid": "f276e064-a6d4-4a50-b53b-f36c1b30c62f",
       "difficulty": 2,
       "topics": [
@@ -120,6 +131,7 @@
     },
     {
       "slug": "darts",
+      "name": "Darts",
       "uuid": "72c8d390-4f07-4ec2-8e5a-4f57cf04e29c",
       "difficulty": 1,
       "topics": [
@@ -129,6 +141,7 @@
     },
     {
       "slug": "queen-attack",
+      "name": "Queen Attack",
       "uuid": "7fd5455c-46d2-4484-9c7d-04fa6ef305f4",
       "difficulty": 1,
       "topics": [
@@ -138,6 +151,7 @@
     },
     {
       "slug": "diamond",
+      "name": "Diamond",
       "uuid": "fa949101-5771-477c-9221-0112dcbbdcde",
       "difficulty": 2,
       "topics": [
@@ -147,6 +161,7 @@
     },
     {
       "slug": "difference-of-squares",
+      "name": "Difference Of Squares",
       "uuid": "ab852e36-3968-403f-93f5-53c7ecafa4c8",
       "difficulty": 2,
       "topics": [
@@ -157,6 +172,7 @@
     },
     {
       "slug": "series",
+      "name": "Series",
       "uuid": "9ca527d7-5065-4856-8c95-07deb664da7e",
       "difficulty": 4,
       "topics": [
@@ -165,6 +181,7 @@
     },
     {
       "slug": "custom-set",
+      "name": "Custom Set",
       "uuid": "453aad9b-044e-473e-87c1-0193afb2cb13",
       "difficulty": 6,
       "topics": [
@@ -173,6 +190,7 @@
     },
     {
       "slug": "triangle",
+      "name": "Triangle",
       "uuid": "2972e0de-b5ca-4fdd-9dbf-648937763394",
       "difficulty": 2,
       "topics": [
@@ -181,6 +199,7 @@
     },
     {
       "slug": "prime-factors",
+      "name": "Prime Factors",
       "uuid": "b6ff9201-e0fc-43e5-9501-cd0509f9ce1c",
       "difficulty": 3,
       "topics": [
@@ -189,6 +208,7 @@
     },
     {
       "slug": "roman-numerals",
+      "name": "Roman Numerals",
       "uuid": "d8ee01b3-307e-4835-a7cd-331e771111ae",
       "difficulty": 4,
       "topics": [
@@ -198,6 +218,7 @@
     },
     {
       "slug": "saddle-points",
+      "name": "Saddle Points",
       "uuid": "51061693-8f01-4dc6-a4c0-0f76771423f8",
       "difficulty": 4,
       "topics": [
@@ -206,6 +227,7 @@
     },
     {
       "slug": "complex-numbers",
+      "name": "Complex Numbers",
       "uuid": "5fc48c1b-0e1b-47b3-b30a-5281ec364aad",
       "difficulty": 5,
       "topics": [
@@ -216,6 +238,7 @@
     },
     {
       "slug": "rational-numbers",
+      "name": "Rational Numbers",
       "uuid": "8b379d6e-196f-4ccc-808d-91fb6255e474",
       "difficulty": 5,
       "topics": [
@@ -224,6 +247,7 @@
     },
     {
       "slug": "beer-song",
+      "name": "Beer Song",
       "uuid": "2fedc6bf-6006-4c2d-bba7-9c66265b6f62",
       "difficulty": 7,
       "topics": [
@@ -233,6 +257,7 @@
     },
     {
       "slug": "anagram",
+      "name": "Anagram",
       "uuid": "8f0570ae-223f-4da4-8b84-268b797b28ad",
       "difficulty": 3,
       "topics": [
@@ -243,6 +268,7 @@
     },
     {
       "slug": "sieve",
+      "name": "Sieve",
       "uuid": "9cfae4bf-cff8-49bc-aee9-a37d553cef81",
       "difficulty": 4,
       "topics": [
@@ -252,6 +278,7 @@
     },
     {
       "slug": "change",
+      "name": "Change",
       "uuid": "a71317c2-4d85-4449-811e-57d3a54a4d12",
       "difficulty": 5,
       "topics": [
@@ -260,6 +287,7 @@
     },
     {
       "slug": "meetup",
+      "name": "Meetup",
       "uuid": "249d0c9f-dadc-4168-ba9b-0c6bfe83618d",
       "difficulty": 6,
       "topics": [
@@ -269,6 +297,7 @@
     },
     {
       "slug": "palindrome-products",
+      "name": "Palindrome Products",
       "uuid": "bc74b87d-d257-41e5-9233-10324a78367c",
       "difficulty": 6,
       "topics": [
@@ -279,6 +308,7 @@
     },
     {
       "slug": "minesweeper",
+      "name": "Minesweeper",
       "uuid": "2cf5d5ba-9820-4918-ac91-811b2a434655",
       "difficulty": 7,
       "topics": [
@@ -290,6 +320,7 @@
     },
     {
       "slug": "dominoes",
+      "name": "Dominoes",
       "uuid": "767acde9-cbca-4cdd-afed-125f14e92e10",
       "difficulty": 8,
       "topics": [
@@ -298,6 +329,7 @@
     },
     {
       "slug": "armstrong-numbers",
+      "name": "Armstrong Numbers",
       "uuid": "a639ce2f-48e3-46cd-9d11-955ba2a9eaaa",
       "difficulty": 2,
       "topics": [
@@ -307,6 +339,7 @@
     },
     {
       "slug": "perfect-numbers",
+      "name": "Perfect Numbers",
       "uuid": "8c58533a-7a1f-11e8-adc0-fa7ae01bbebc",
       "difficulty": 2,
       "topics": [
@@ -316,6 +349,7 @@
     },
     {
       "slug": "sum-of-multiples",
+      "name": "Sum Of Multiples",
       "uuid": "5af1c90a-f98d-4682-885b-9770c9223194",
       "difficulty": 3,
       "topics": [
@@ -324,6 +358,7 @@
     },
     {
       "slug": "parallel-letter-frequency",
+      "name": "Parallel Letter Frequency",
       "uuid": "be69c23b-7559-44fe-9e21-94a865199de7",
       "difficulty": 4,
       "topics": [
@@ -333,6 +368,7 @@
     },
     {
       "slug": "forth",
+      "name": "Forth",
       "uuid": "95335b21-a840-45f3-8d65-d7de7aec228a",
       "difficulty": 6,
       "topics": [
@@ -343,6 +379,7 @@
     },
     {
       "slug": "pascals-triangle",
+      "name": "Pascals Triangle",
       "uuid": "589b763c-2b3a-11e8-b467-0ed5f89f718b",
       "difficulty": 6,
       "topics": [
@@ -353,6 +390,7 @@
     },
     {
       "slug": "secret-handshake",
+      "name": "Secret Handshake",
       "uuid": "580309f9-65f1-480b-bdb6-c14846963c33",
       "difficulty": 1,
       "topics": [
@@ -363,6 +401,7 @@
     },
     {
       "slug": "allergies",
+      "name": "Allergies",
       "uuid": "51af2614-e349-4e90-b917-177a6017e786",
       "difficulty": 4,
       "topics": [
@@ -372,6 +411,7 @@
     },
     {
       "slug": "bank-account",
+      "name": "Bank Account",
       "uuid": "a7e2e89c-c599-4e30-a944-a9d4a98f2b94",
       "difficulty": 6,
       "topics": [
@@ -382,6 +422,7 @@
     },
     {
       "slug": "poker",
+      "name": "Poker",
       "uuid": "693be489-153f-409d-9c2d-52b718997785",
       "difficulty": 6,
       "topics": [
@@ -391,6 +432,7 @@
     },
     {
       "slug": "connect",
+      "name": "Connect",
       "uuid": "211c12df-5254-4abf-850b-a9596b2aba3a",
       "difficulty": 8,
       "topics": [
@@ -401,6 +443,7 @@
     },
     {
       "slug": "list-ops",
+      "name": "List Ops",
       "uuid": "e80410bb-45e5-4007-ad97-e7470dd87ed5",
       "difficulty": 2,
       "topics": [
@@ -409,6 +452,7 @@
     },
     {
       "slug": "protein-translation",
+      "name": "Protein Translation",
       "uuid": "3c79d343-a180-4cab-9622-04203cbc564a",
       "difficulty": 3,
       "topics": [
@@ -419,6 +463,7 @@
     },
     {
       "slug": "scrabble-score",
+      "name": "Scrabble Score",
       "uuid": "4f5045d5-9ae1-4bdb-ac0b-a5d279a60ed8",
       "difficulty": 3,
       "topics": [
@@ -428,6 +473,7 @@
     },
     {
       "slug": "all-your-base",
+      "name": "All Your Base",
       "uuid": "85e23906-6fd8-486a-add8-a6c932cef7e3",
       "difficulty": 4,
       "topics": [
@@ -436,6 +482,7 @@
     },
     {
       "slug": "spiral-matrix",
+      "name": "Spiral Matrix",
       "uuid": "625ad6f2-c9e8-4129-a290-057209f941c5",
       "difficulty": 8,
       "topics": [
@@ -444,6 +491,7 @@
     },
     {
       "slug": "gigasecond",
+      "name": "Gigasecond",
       "uuid": "24ae9a43-4e1c-418b-97f6-2c83dbc0e14a",
       "difficulty": 3,
       "topics": [
@@ -452,6 +500,7 @@
     },
     {
       "slug": "grade-school",
+      "name": "Grade School",
       "uuid": "67bbcc69-31b7-41f2-a8e1-5a07d30e00d6",
       "difficulty": 4,
       "topics": [
@@ -460,6 +509,7 @@
     },
     {
       "slug": "sublist",
+      "name": "Sublist",
       "uuid": "2f974a71-a432-410b-a432-1e44950ad018",
       "difficulty": 4,
       "topics": [
@@ -469,6 +519,7 @@
     },
     {
       "slug": "largest-series-product",
+      "name": "Largest Series Product",
       "uuid": "b312ff0e-90e3-4dd8-99dc-df4a9deb1907",
       "difficulty": 5,
       "topics": [
@@ -478,6 +529,7 @@
     },
     {
       "slug": "satellite",
+      "name": "Satellite",
       "uuid": "f69d4fd0-3547-4be0-8d09-f368b80b9df7",
       "difficulty": 5,
       "topics": [
@@ -486,6 +538,7 @@
     },
     {
       "slug": "zipper",
+      "name": "Zipper",
       "uuid": "b6c242d3-40d5-484d-8466-1a32d2332288",
       "difficulty": 8,
       "topics": [
@@ -496,6 +549,7 @@
     },
     {
       "slug": "isbn-verifier",
+      "name": "Isbn Verifier",
       "uuid": "ba4cd1e4-b5f0-4efc-a4c8-58c5252cae9e",
       "difficulty": 3,
       "topics": [
@@ -504,6 +558,7 @@
     },
     {
       "slug": "run-length-encoding",
+      "name": "Run Length Encoding",
       "uuid": "13327e7d-0c07-4520-9b55-f9195b6224c3",
       "difficulty": 3,
       "topics": [
@@ -512,6 +567,7 @@
     },
     {
       "slug": "simple-linked-list",
+      "name": "Simple Linked List",
       "uuid": "56a794de-40ee-4ff2-a1dd-f9b83f62d4b0",
       "difficulty": 3,
       "topics": [
@@ -522,6 +578,7 @@
     },
     {
       "slug": "clock",
+      "name": "Clock",
       "uuid": "df90c039-8629-497a-a809-5ba2d1f8d52f",
       "difficulty": 4,
       "topics": [
@@ -531,6 +588,7 @@
     },
     {
       "slug": "variable-length-quantity",
+      "name": "Variable Length Quantity",
       "uuid": "1acd7529-c487-4bea-9146-620b8ad5ef34",
       "difficulty": 5,
       "topics": [
@@ -541,6 +599,7 @@
     },
     {
       "slug": "luhn",
+      "name": "Luhn",
       "uuid": "e938c3e6-0b0f-498e-a3ec-47251f5bb55c",
       "difficulty": 6,
       "topics": [
@@ -549,6 +608,7 @@
     },
     {
       "slug": "pythagorean-triplet",
+      "name": "Pythagorean Triplet",
       "uuid": "d1afdffa-0340-43b7-8015-4d706c10b8da",
       "difficulty": 6,
       "topics": [
@@ -558,6 +618,7 @@
     },
     {
       "slug": "atbash-cipher",
+      "name": "Atbash Cipher",
       "uuid": "d8e38780-d04e-43fc-8606-97dc71e4974b",
       "difficulty": 3,
       "topics": [
@@ -567,6 +628,7 @@
     },
     {
       "slug": "nth-prime",
+      "name": "Nth Prime",
       "uuid": "8600a843-ec71-4f1a-b9fe-2ed515035101",
       "difficulty": 4,
       "topics": [
@@ -576,6 +638,7 @@
     },
     {
       "slug": "transpose",
+      "name": "Transpose",
       "uuid": "9af2325d-0450-45a3-a0da-8a18fafa0b7f",
       "difficulty": 4,
       "topics": [
@@ -585,6 +648,7 @@
     },
     {
       "slug": "word-count",
+      "name": "Word Count",
       "uuid": "43df8921-f0c3-4a0c-9bdf-eb89405049ad",
       "difficulty": 4,
       "topics": [
@@ -595,6 +659,7 @@
     },
     {
       "slug": "etl",
+      "name": "Etl",
       "uuid": "60fc4ea6-28b0-4914-bcc3-a0caefca3cb5",
       "difficulty": 6,
       "topics": [
@@ -605,6 +670,7 @@
     },
     {
       "slug": "circular-buffer",
+      "name": "Circular Buffer",
       "uuid": "058b48a9-03ec-43bc-88eb-9dbce8b79e59",
       "difficulty": 7,
       "topics": [
@@ -614,6 +680,7 @@
     },
     {
       "slug": "phone-number",
+      "name": "Phone Number",
       "uuid": "668f3947-3142-485e-89f8-e0e5060be29d",
       "difficulty": 3,
       "topics": [
@@ -623,6 +690,7 @@
     },
     {
       "slug": "robot-simulator",
+      "name": "Robot Simulator",
       "uuid": "a2d4ca29-54e2-4969-bfc9-ee483acf9caf",
       "difficulty": 4,
       "topics": [
@@ -633,6 +701,7 @@
     },
     {
       "slug": "rotational-cipher",
+      "name": "Rotational Cipher",
       "uuid": "8ad0c97b-189d-46ac-bb72-2c72f1fe4728",
       "difficulty": 5,
       "topics": [
@@ -642,6 +711,7 @@
     },
     {
       "slug": "crypto-square",
+      "name": "Crypto Square",
       "uuid": "a534bd4a-8a72-11e8-9a94-a6cf71072f73",
       "difficulty": 6,
       "topics": [
@@ -651,6 +721,7 @@
     },
     {
       "slug": "rail-fence-cipher",
+      "name": "Rail Fence Cipher",
       "uuid": "9bb14014-9732-11e8-9eb6-529269fb1459",
       "difficulty": 6,
       "topics": [
@@ -660,6 +731,7 @@
     },
     {
       "slug": "book-store",
+      "name": "Book Store",
       "uuid": "21db1eaa-db00-49fc-9ec5-c2913a9ff616",
       "difficulty": 7,
       "topics": [
@@ -668,6 +740,7 @@
     },
     {
       "slug": "grains",
+      "name": "Grains",
       "uuid": "c3070adc-d434-4989-8d6b-d9e483e32d1c",
       "difficulty": 2,
       "topics": [
@@ -677,6 +750,7 @@
     },
     {
       "slug": "isogram",
+      "name": "Isogram",
       "uuid": "94b997bb-8e8d-4519-ba97-199d0f35a80a",
       "difficulty": 2,
       "topics": [
@@ -687,6 +761,7 @@
     },
     {
       "slug": "nucleotide-count",
+      "name": "Nucleotide Count",
       "uuid": "d3cbfc9a-a495-4bf2-87d0-811d5f71fda6",
       "difficulty": 2,
       "topics": [
@@ -696,6 +771,7 @@
     },
     {
       "slug": "pangram",
+      "name": "Pangram",
       "uuid": "9c092a14-475b-4b1b-ac4b-fb19467367ff",
       "difficulty": 2,
       "topics": [
@@ -706,6 +782,7 @@
     },
     {
       "slug": "bracket-push",
+      "name": "Bracket Push",
       "uuid": "f93f5f18-3e3b-11e8-b467-0ed5f89f718b",
       "difficulty": 3,
       "topics": []
